# Some-Data-Structures

./: BinaryTree.hpp  CMakeLists.txt  README.md  Tree.cpp
.github/workflows/: multiplatform-build.yml  multiplatform-tests.yml
BinaryTree/: BinaryTree.hpp  BinaryTree.tpp  CMakeLists.txt  main.cpp
BinaryTree/src/: main.cpp
BinaryTree/test/: AbstractTest.cpp
Queue/: CMakeLists.txt  main.cpp
Stack/: CMakeLists.txt  StackArray.cpp  StackVirtual.hpp  main.cpp
Stack/src/: LimitedSizeStackTesting.cpp  LimitedSizeStackTesting.hpp
Stack/test/: AbstractTest.cpp  CMakeLists.txt  bracketsOperations.cpp
